# Bot

./: .gitignore  CLAUDE.md  Dockerfile  FLAWS.md  IDEA.md  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  compose-local.yaml  config.py  polling.py  pyproject.toml  run_asgi.py  run_polling.py  run_webhook.py  webhook.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
app/: bot.py  logging.py  utils.py
app/actions/: proceed.py
app/asgi/: __init__.py  asgi.py  dependencies.py  limiter.py  logger.py  logging.json  logging.py
app/asgi/api/: router.py
app/bot/: __init__.py  bot.py  locale_manager.py  logging.py  utils.py
app/celery/: crons.py  tasks.py  worker.py
app/database/: database.py  models.py
app/routes/: start.py
app/scenes/: start.py
locales/: messages.pot
locales/en/: buttons.ftl  home.ftl  language.ftl  notifications.ftl  schedule.ftl  settings.ftl  start.ftl  weekdays.ftl
locales/jk/: buttons.ftl  start.ftl  weekdays.ftl
locales/kk/: buttons.ftl  home.ftl  language.ftl  notifications.ftl  schedule.ftl  settings.ftl
locales/pl/: buttons.ftl  home.ftl  language.ftl  notifications.ftl  schedule.ftl  settings.ftl  start.ftl  weekdays.ftl
locales/ru/: buttons.ftl  home.ftl  language.ftl  notifications.ftl  schedule.ftl  settings.ftl  start.ftl
locales/uk/: buttons.ftl  home.ftl  language.ftl  notifications.ftl  schedule.ftl  settings.ftl  start.ftl  weekdays.ftl
migrations/: env.py
migrations/versions/: 15bc4d6460be_teachers.py  2f1485fbd784_settings.py  a7c4d2f1e3b9_notifications.py  (+1 more)
(+84 files in other folders)
