[project]
name = "pocketcdv-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Plummy",email = "plummybeatsoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.27.0,<4.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "babel (>=2.18.0,<3.0.0)",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
