[project]
name = "pocketcdv-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Plummy",email = "plummybeatsoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.27.0,<4.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "babel (>=2.18.0,<3.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg (>=3.3.3,<4.0.0)",
    "psycopg-binary (>=3.3.3,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "uvicorn (>=0.45.0,<0.46.0)",
    "certifi (>=2026.2.25,<2027.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
